--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST"
+    "# MNIST DATASET"
    ]
   },
   {
@@ -35,35 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-2-8bf8ae5a5303>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
-      "WARNING:tensorflow:From C:\\Users\\bhatt\\Anaconda3\\envs\\virenv\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please write your own downloading logic.\n",
-      "WARNING:tensorflow:From C:\\Users\\bhatt\\Anaconda3\\envs\\virenv\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use urllib or similar directly.\n",
-      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
-      "WARNING:tensorflow:From C:\\Users\\bhatt\\Anaconda3\\envs\\virenv\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use tf.data to implement this functionality.\n",
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
-      "WARNING:tensorflow:From C:\\Users\\bhatt\\Anaconda3\\envs\\virenv\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use tf.data to implement this functionality.\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "WARNING:tensorflow:From C:\\Users\\bhatt\\Anaconda3\\envs\\virenv\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use tf.one_hot on tensors.\n",
-      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
-      "WARNING:tensorflow:From C:\\Users\\bhatt\\Anaconda3\\envs\\virenv\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
+      
      ]
     }
    ],
